<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="300dp" 
    android:orientation="vertical"
    android:background="#FFFFFF">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/ic_launcher"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_name" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textColor="@android:color/black" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textColor="#2F4F4F" />
    <Button 
        android:id="@+id/aboutusok"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:text="@string/aboutusok"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:background="#32CD32"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textSize="10dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textColor="@android:color/black" />
        
</LinearLayout>
