<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/startbackground" >

    <ImageButton
        android:id="@+id/startgame"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/startgame"
        android:contentDescription="@string/startgame" />

    <ImageButton
        android:id="@+id/setmode"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/startgame"
        android:background="@drawable/setmode"
        android:contentDescription="@string/setmode" />

    <ImageButton
        android:id="@+id/openchessmanual"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/setmode"
        android:background="@drawable/openchessmanual"
        android:contentDescription="@string/startgame" />

    <ImageButton
        android:id="@+id/aboutus"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/openchessmanual"
        android:background="@drawable/aboutus"
        android:contentDescription="@string/aboutus" />

    <ImageButton
        android:id="@+id/exit"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/aboutus"
        android:background="@drawable/exit"
        android:contentDescription="@string/exit" />

</RelativeLayout>