<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="@drawable/result" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:text="@string/gameresult"
            android:textSize="20dp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF" >

        <ImageView
            android:id="@+id/gamesuccess"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/success" />

        <ImageView
            android:id="@+id/gamefail"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/fail" />

        <RelativeLayout
            android:id="@+id/doublegame"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <RelativeLayout
                android:id="@+id/resulttext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="50dp"
                    android:text="@string/blackside"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="50dp"
                    android:text="@string/whiteside"
                    android:textSize="20dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/resulttext"
                android:orientation="horizontal" >

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_toLeftOf="@+id/versus">

                    <ImageView
                        android:id="@+id/black_laugh"
                        android:layout_width="90dp"
                        android:layout_height="fill_parent"
                        android:background="@drawable/laugh" />

                    <ImageView
                        android:id="@+id/black_cry"
                        android:layout_width="90dp"
                        android:layout_height="fill_parent"
                        android:background="@drawable/cry" />
                </FrameLayout>

                <ImageView
                    android:id="@+id/versus"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/versus" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/versus" >

                    <ImageView
                        android:id="@+id/white_laugh"
                        android:layout_width="90dp"
                        android:layout_height="fill_parent"
                        android:background="@drawable/laugh" />

                    <ImageView
                        android:id="@+id/white_cry"
                        android:layout_width="90dp"
                        android:layout_height="fill_parent"
                        android:background="@drawable/cry" />
                </FrameLayout>
            </RelativeLayout>
        </RelativeLayout>
    </FrameLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/gameresultok"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/gameresultok"
            android:textSize="15dp" />
    </RelativeLayout>

</LinearLayout>